# rolex

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: hosts.rs  install.rs  install_anasamble.rs  mod.rs  playbooks.rs  utils.rs
src/config/: hosts.ini
src/playbooks/: add_user.yml  caddy_reload.yml  install_caddy.yml  new_user.yml  setup.yml
src/utils/: common.rs  mod.rs
