[package]
name = "rolex"
version = "0.1.0"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2018"
description = "A CLI utility for managing server tasks"
license = "MIT"
repository = "https://github.com/AlexTiTanium/rolex"

[dependencies]
clap = "2.33.3"
log = "0.4.20"
pretty_env_logger = "0.5.0"
colored = "2.0.4"

[build-dependencies]
