[package]
name = "rollit"
version = "0.1.3"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2018"
description = "A CLI utility for managing server tasks"
license = "MIT"
repository = "https://github.com/AlexTiTanium/rollit"

[dependencies]
clap = "2.33.3"
log = "0.4.20"
pretty_env_logger = "0.5.0"
colored = "2.0.4"
dirs = "5.0.1"
configparser = "3.0.2"
tempfile = "3.8.0"
maplit = "1.0.2"

[build-dependencies]
